--- a/unetr.ipynb
+++ b/unetr.ipynb
@@ -277,11 +277,9 @@
         "\n",
         "import torch\n",
         "\n",
-        "# Updated paths (since you're running on Kaggle now)\n",
         "split_json = \"/content/drive/MyDrive/input_spine/spider_dataset (2).json\"\n",
         "data_dir = \"/content/drive/MyDrive/\" \n",
         "datalist_file=data_dir+split_json\n",
-        "# /kaggle/working/input_spine_imgs/spider_dataset.json\n",
         "# Load splits using updated data_dir\n",
         "train_files = load_decathlon_datalist(split_json, True, data_list_key=\"training\", base_dir=data_dir)\n",
         "val_files = load_decathlon_datalist(split_json, True, data_list_key=\"validation\", base_dir=data_dir)\n",
@@ -387,7 +385,6 @@
         "    res_block=True,               \n",
         ").to(device)\n",
         "\n",
-        "#Using DiceCELoss combination of Dice loss and Cross-Entropy loss, using one hot encoding and soft max\n",
         "loss_function = DiceCELoss(to_onehot_y=True, softmax=True)\n",
         "torch.backends.cudnn.benchmark = True\n",
         "\n",
@@ -410,16 +407,15 @@
         "# For predictions\n",
         "post_pred = Compose([\n",
         "    AsDiscrete(argmax=True, to_onehot=20),\n",
-        "    EnsureType(data_type=\"tensor\")  # Correct argument\n",
+        "    EnsureType(data_type=\"tensor\")\n",
         "])\n",
         "\n",
         "# For labels\n",
         "post_label = Compose([\n",
         "    AsDiscrete(to_onehot=20),\n",
-        "    EnsureType(data_type=\"tensor\")  # Correct argument\n",
+        "    EnsureType(data_type=\"tensor\")\n",
         "])\n",
         "\n",
-        "# Assuming dice_metric is already defined\n",
         "dice_metric = DiceMetric(include_background=False, reduction=\"mean\")\n",
         "\n",
         "def validation(epoch_iterator_val):\n",
@@ -437,7 +433,6 @@
         "        for batch in epoch_iterator_val:\n",
         "            val_inputs, val_labels = (batch[\"image\"].to(device), batch[\"label\"].to(device))\n",
         "\n",
-        "            # REMAP VALIDATION LABELS HERE\n",
         "            val_labels = remap_labels(val_labels)  # <-- Critical fix\n",
         "\n",
         "            val_outputs = sliding_window_inference(val_inputs, (32, 128, 128), 4, model)\n",
@@ -448,7 +443,6 @@
         "            val_outputs_list = decollate_batch(val_outputs)\n",
         "            val_output_convert = [post_pred(val_pred_tensor) for val_pred_tensor in val_outputs_list]\n",
         "\n",
-        "            # Compute the Dice metric for this batch\n",
         "            dice_metric(y_pred=val_output_convert, y=val_labels_convert)\n",
         "\n",
         "            # Update progress bar\n",
@@ -456,7 +450,7 @@
         "\n",
         "        # Get the mean Dice score for the validation set\n",
         "        mean_dice_val = dice_metric.aggregate().item()\n",
-        "        dice_metric.reset()  # Reset the metric for the next validation\n",
+        "        dice_metric.reset() \n",
         "\n",
         "    return mean_dice_val\n",
         "label_map = {\n",
@@ -498,7 +492,6 @@
         "        y = remap_labels(y)\n",
         "        # print(f\"Input shape: {x.shape}, Label shape: {y.shape}\")\n",
         "\n",
-        "        # Check label values are within expected range\n",
         "        if not torch.all((y >= 0) & (y <= 19)):\n",
         "            print(f\"Invalid labels found. Min: {y.min()}, Max: {y.max()}\")\n",
         "            raise ValueError(\"Found label values outside expected range [0, 12].\")\n",
