--- a/unetr.ipynb
+++ b/unetr.ipynb
@@ -433,7 +433,7 @@
         "        for batch in epoch_iterator_val:\n",
         "            val_inputs, val_labels = (batch[\"image\"].to(device), batch[\"label\"].to(device))\n",
         "\n",
-        "            val_labels = remap_labels(val_labels)  # <-- Critical fix\n",
+        "            val_labels = remap_labels(val_labels)\n",
         "\n",
         "            val_outputs = sliding_window_inference(val_inputs, (32, 128, 128), 4, model)\n",
         "\n",
@@ -506,7 +506,7 @@
         "        optimizer.step()\n",
         "        optimizer.zero_grad()\n",
         "\n",
-        "        epoch_iterator.set_description(  # noqa: B038\n",
+        "        epoch_iterator.set_description(\n",
         "            \"Training (%d / %d Steps) (loss=%2.5f)\" % (global_step, max_iterations, loss)\n",
         "        )\n",
         "\n",
